# HeronTestProject

./: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  results.json
scripts/: test_activation.py  visualize_environment.py  visualize_results.py
src/azure_model_activation/: __init__.py  azure_openai.py  cli.py
src/benchmark/: agent.py  cli.py  environment.py  models.py  runner.py  scenarios.py  tools.py
src/benchmark/data/: equal_safe_models.json  harmfull_model.json  harmfull_model_bad_config.json
tests/: test_full_pipeline_mock.py  test_honest_agent_real.py  test_phase1.py  test_phase2_mock.py
